--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,21 @@ metal = [
     "jax-metal>=0.1.0",
 ]
 
+# Video recording support
+video = [
+    "moviepy>=1.0.0",
+]
+
 # Development dependencies
 dev = [
+    "pytest>=7.0.0",
+    "ruff>=0.1.0",
+]
+
+# All optional dependencies
+all = [
+    "jax-metal>=0.1.0",
+    "moviepy>=1.0.0",
     "pytest>=7.0.0",
     "ruff>=0.1.0",
 ]
